--- a/my_words/ios/Podfile
+++ b/my_words/ios/Podfile
@@ -1,3 +1,6 @@
+platform :ios, '11.0'
+use_frameworks!
+
 # Uncomment this line to define a global platform for your project
 # platform :ios, '11.0'
 
