--- a/my_words/pubspec.yaml
+++ b/my_words/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intro_slider: ^4.2.0
   fl_chart: ^0.40.0
+  # flutter_sound: ^9.0.0
+  path_provider: ^2.0.8
+  audioplayers: ^4.0.1
 
 dev_dependencies:
   flutter_test:
