--- a/my_words/pubspec.yaml
+++ b/my_words/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   intro_slider: ^4.2.0
   fl_chart: ^0.40.0
-  # flutter_sound: ^9.0.0
+  
   path_provider: ^2.0.8
-  audioplayers: ^4.0.1
+  flutter_localization: ^0.1.10
+  intl: ^0.18.1
+  flutter_gen_runner: ^5.3.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
