--- a/my_words/pubspec.yaml
+++ b/my_words/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_localization: ^0.1.10
   intl: ^0.18.1
   flutter_gen_runner: ^5.3.0
+  google_fonts: ^4.0.4
   
 
 dev_dependencies:
