--- a/my_words/windows/runner/Runner.rc
+++ b/my_words/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "my_words" "\0"
+            VALUE "CompanyName", "com.omer_erdogan" "\0"
+            VALUE "FileDescription", "word_box" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "my_words" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "my_words.exe" "\0"
-            VALUE "ProductName", "my_words" "\0"
+            VALUE "InternalName", "word_box" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.omer_erdogan. All rights reserved." "\0"
+            VALUE "OriginalFilename", "word_box.exe" "\0"
+            VALUE "ProductName", "word_box" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
