--- a/my_words/pubspec.yaml
+++ b/my_words/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -17,10 +17,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+5
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -39,14 +39,23 @@ dependencies:
   cupertino_icons: ^1.0.2
   intro_slider: ^4.2.0
   fl_chart: ^0.40.0
-  
+
   path_provider: ^2.0.8
   flutter_localization: ^0.1.10
   intl: ^0.18.1
   flutter_gen_runner: ^5.3.0
   google_fonts: ^4.0.4
-  
-
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.0
+  change_app_package_name: ^1.1.0
+  lottie: ^2.3.2
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/huge.png"
+flutter_native_splash:
+  image: "assets/images/Wor.png"
+  color: "#ffffff"
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,7 +72,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -72,7 +80,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
