--- a/my_words/pubspec.yaml
+++ b/my_words/pubspec.yaml
@@ -39,10 +39,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   intro_slider: ^4.2.0
   fl_chart: ^0.40.0
-
+  auto_size_text: ^3.0.0
   path_provider: ^2.0.8
-  flutter_localization: ^0.1.10
-  intl: ^0.18.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.0
   flutter_gen_runner: ^5.3.0
   google_fonts: ^4.0.4
   flutter_launcher_icons: ^0.13.1
